src/objects/product__c.object
<CustomObject>
    <fields>
        <fullName>Cname__c</fullName>
        <label>中文名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ename__c</fullName>
        <label>英文名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>单价</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpecificationType__c</fullName>
        <label>规格型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>类别</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>设备</fullName>
                </value>
                <value>
                    <fullName>备件</fullName>
                </value>
                <value>
                    <fullName>耗材</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>#产品</label>
    <nameField>
        <label>产品编号</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>产品</pluralLabel>
    <recordTypes>
        <fullName>LensAr</fullName>
        <active>true</active>
        <label>飞白</label>
    </recordTypes>
    <recordTypes>
        <fullName>Luneau</fullName>
        <active>true</active>
        <label>自动检眼仪</label>
    </recordTypes>
    <recordTypes>
        <fullName>OuBao</fullName>
        <active>true</active>
        <label>欧堡</label>
    </recordTypes>
    <recordTypes>
        <fullName>myopia</fullName>
        <active>true</active>
        <label>准分子</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>